rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x1080.1_2018_E-health-identification.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x1080.1_2018_E-health-identification.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod e_health_identification {
    extern crate alloc;
    use super::telebiometrics::{ID_OBJ_CAT, ID_THPROT};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct DeviceIdentification {
        pub scheme: ObjectIdentifier,
        #[rasn(identifier = "schemeName")]
        pub scheme_name: Option<SchemeName>,
        #[rasn(identifier = "manufacturerId")]
        pub manufacturer_id: Option<Any>,
        pub device: Any,
        pub formats: SupportedFormats,
    }
    impl DeviceIdentification {
        pub fn new(
            scheme: ObjectIdentifier,
            scheme_name: Option<SchemeName>,
            manufacturer_id: Option<Any>,
            device: Any,
            formats: SupportedFormats,
        ) -> Self {
            Self {
                scheme,
                scheme_name,
                manufacturer_id,
                device,
                formats,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct Identification {
        pub category: ObjectIdentifier,
        pub identification: Any,
    }
    impl Identification {
        pub fn new(category: ObjectIdentifier, identification: Any) -> Self {
            Self {
                category,
                identification,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct InsuranceIdentification {
        pub scheme: ObjectIdentifier,
        #[rasn(identifier = "schemeName")]
        pub scheme_name: Option<SchemeName>,
        #[rasn(identifier = "manufacturerId")]
        pub manufacturer_id: Any,
        pub insurance: Any,
        #[rasn(identifier = "insuranceCert")]
        pub insurance_cert: Any,
    }
    impl InsuranceIdentification {
        pub fn new(
            scheme: ObjectIdentifier,
            scheme_name: Option<SchemeName>,
            manufacturer_id: Any,
            insurance: Any,
            insurance_cert: Any,
        ) -> Self {
            Self {
                scheme,
                scheme_name,
                manufacturer_id,
                insurance,
                insurance_cert,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct LaboratoryIdentification {
        pub scheme: ObjectIdentifier,
        #[rasn(identifier = "schemeName")]
        pub scheme_name: Option<SchemeName>,
        pub qualifications: Option<Any>,
    }
    impl LaboratoryIdentification {
        pub fn new(
            scheme: ObjectIdentifier,
            scheme_name: Option<SchemeName>,
            qualifications: Option<Any>,
        ) -> Self {
            Self {
                scheme,
                scheme_name,
                qualifications,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct ManufacturerIdentification {
        pub scheme: ObjectIdentifier,
        #[rasn(identifier = "schemeName")]
        pub scheme_name: Option<SchemeName>,
        #[rasn(identifier = "manufacturerId")]
        pub manufacturer_id: Any,
        #[rasn(identifier = "drugId")]
        pub drug_id: Any,
    }
    impl ManufacturerIdentification {
        pub fn new(
            scheme: ObjectIdentifier,
            scheme_name: Option<SchemeName>,
            manufacturer_id: Any,
            drug_id: Any,
        ) -> Self {
            Self {
                scheme,
                scheme_name,
                manufacturer_id,
                drug_id,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct MedicalRecordIdentification {
        pub scheme: ObjectIdentifier,
        #[rasn(identifier = "schemeName")]
        pub scheme_name: Option<SchemeName>,
        #[rasn(identifier = "definingOrg")]
        pub defining_org: Any,
        #[rasn(identifier = "recordType")]
        pub record_type: Any,
        pub record: Any,
    }
    impl MedicalRecordIdentification {
        pub fn new(
            scheme: ObjectIdentifier,
            scheme_name: Option<SchemeName>,
            defining_org: Any,
            record_type: Any,
            record: Any,
        ) -> Self {
            Self {
                scheme,
                scheme_name,
                defining_org,
                record_type,
                record,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct MedicalStaffIdentification {
        pub scheme: ObjectIdentifier,
        #[rasn(identifier = "schemeName")]
        pub scheme_name: Option<SchemeName>,
        #[rasn(identifier = "medicalStaffId")]
        pub medical_staff_id: Any,
        pub qualifications: Option<Any>,
    }
    impl MedicalStaffIdentification {
        pub fn new(
            scheme: ObjectIdentifier,
            scheme_name: Option<SchemeName>,
            medical_staff_id: Any,
            qualifications: Option<Any>,
        ) -> Self {
            Self {
                scheme,
                scheme_name,
                medical_staff_id,
                qualifications,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct ObserverIdentification {
        pub scheme: ObjectIdentifier,
        #[rasn(identifier = "schemeName")]
        pub scheme_name: Option<SchemeName>,
        #[rasn(identifier = "observerId")]
        pub observer_id: Any,
    }
    impl ObserverIdentification {
        pub fn new(
            scheme: ObjectIdentifier,
            scheme_name: Option<SchemeName>,
            observer_id: Any,
        ) -> Self {
            Self {
                scheme,
                scheme_name,
                observer_id,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct PatientIdentification {
        pub scheme: ObjectIdentifier,
        #[rasn(identifier = "schemeName")]
        pub scheme_name: Option<SchemeName>,
        #[rasn(identifier = "patientId")]
        pub patient_id: Any,
    }
    impl PatientIdentification {
        pub fn new(
            scheme: ObjectIdentifier,
            scheme_name: Option<SchemeName>,
            patient_id: Any,
        ) -> Self {
            Self {
                scheme,
                scheme_name,
                patient_id,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct PharmaceuticalStaffIdentification {
        pub scheme: ObjectIdentifier,
        #[rasn(identifier = "schemeName")]
        pub scheme_name: Option<SchemeName>,
        #[rasn(identifier = "medicalStaffId")]
        pub medical_staff_id: Any,
        pub qualifications: Option<Any>,
    }
    impl PharmaceuticalStaffIdentification {
        pub fn new(
            scheme: ObjectIdentifier,
            scheme_name: Option<SchemeName>,
            medical_staff_id: Any,
            qualifications: Option<Any>,
        ) -> Self {
            Self {
                scheme,
                scheme_name,
                medical_staff_id,
                qualifications,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags)]
    #[non_exhaustive]
    pub enum SchemeName {
        string(ISO646String),
        oid(ObjectIdentifier),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct SoftwareIdentification {
        pub scheme: ObjectIdentifier,
        #[rasn(identifier = "schemeName")]
        pub scheme_name: Option<SchemeName>,
        #[rasn(identifier = "manufacturerId")]
        pub manufacturer_id: Option<Any>,
        pub software: Any,
    }
    impl SoftwareIdentification {
        pub fn new(
            scheme: ObjectIdentifier,
            scheme_name: Option<SchemeName>,
            manufacturer_id: Option<Any>,
            software: Any,
        ) -> Self {
            Self {
                scheme,
                scheme_name,
                manufacturer_id,
                software,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags, identifier = "Supported-formats")]
    #[non_exhaustive]
    pub enum SupportedFormats {
        oids(SequenceOf<ObjectIdentifier>),
    }
    pub static ID_DRUG_MANUFAC: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_OBJ_CAT, &[6u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_LAB: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_OBJ_CAT, &[5u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_MED_DEVICE: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_OBJ_CAT, &[7u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_MED_INSUR: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_OBJ_CAT, &[9u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_MED_REC: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_OBJ_CAT, &[10u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_MED_SOFTW: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_OBJ_CAT, &[8u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_MED_STAFF: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_OBJ_CAT, &[2u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_OBSERVER: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_OBJ_CAT, &[3u32]].concat())
            .unwrap()
            .to_owned()
    });
    #[doc = " Object categories"]
    pub static ID_PATIENT: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_OBJ_CAT, &[1u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_PHARM_STAFF: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_OBJ_CAT, &[4u32]].concat())
            .unwrap()
            .to_owned()
    });
    #[doc = " Allocation of object identifiers:"]
    pub static ID_X1080_1: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_THPROT, &[1u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_X1080_1_CMS_CONTENT: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_X1080_1, &[1u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_X1080_1_MODULES: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_X1080_1, &[0u32]].concat())
            .unwrap()
            .to_owned()
    });
}
