rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x1082_2007-Amd1_Human-Physiology.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x1082_2007-Amd1_Human-Physiology.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod human_physiology {
    extern crate alloc;
    use super::telebiometrics::{ID_HUM_PHYS, IRI_HUM_PHYS};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    pub static ID_AUDIO_IN: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_SYMBOLS, &[3u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_AUDIO_OUT: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_SYMBOLS, &[9u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_CALOR_IN: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_SYMBOLS, &[6u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_CALOR_OUT: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_SYMBOLS, &[12u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_CHEMO_IN: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_SYMBOLS, &[4u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_CHEMO_OUT: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_SYMBOLS, &[10u32]].concat())
            .unwrap()
            .to_owned()
    });
    #[doc = " In addition object identifier values are allocated with all"]
    #[doc = " values of \"<x>\" from 1 to 4095 in the following:"]
    #[doc = " id-comb<x> OBJECT IDENTIFIER ::={id-symbol-comb <x>}"]
    #[doc = " Example:"]
    pub static ID_COMB2307: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_SYMBOL_COMB, &[2307u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_RADIO_IN: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_SYMBOLS, &[5u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_RADIO_OUT: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_SYMBOLS, &[11u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_SAFE: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_SYMBOLS, &[13u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_SYMBOL_COMB: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_HUM_PHYS, &[2u32]].concat())
            .unwrap()
            .to_owned()
    });
    #[doc = " *1* OBJECT IDENTIFIER allocations specific to ITU-T X.1082"]
    pub static ID_SYMBOLS: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_HUM_PHYS, &[1u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_TANGO_IN: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_SYMBOLS, &[1u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_TANGO_OUT: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_SYMBOLS, &[7u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_THRESHOLDS: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_SYMBOLS, &[14u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_VIDEO_IN: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_SYMBOLS, &[2u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_VIDEO_OUT: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_SYMBOLS, &[8u32]].concat())
            .unwrap()
            .to_owned()
    });
}
