rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x1083_2007_BIP-TCPIP.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x1083_2007_BIP-TCPIP.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod bip_tcpip {
    extern crate alloc;
    use super::bip::BIPMessage;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags)]
    pub enum TCPIPBIPMessageContent {
        #[rasn(value("0.."))]
        bIPMessage(OctetString),
        keepalive(()),
        #[rasn(value("0..=65535"))]
        requestLinkChannelOnSpecifiedPort(u16),
        requestLinkChannel(()),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct TCPIPBIPMessage {
        #[rasn(size("4"), identifier = "magicNumber")]
        pub magic_number: OctetString,
        #[rasn(value("0..=255"))]
        pub version: u8,
        pub content: TCPIPBIPMessageContent,
    }
    impl TCPIPBIPMessage {
        pub fn new(
            magic_number: OctetString,
            version: u8,
            content: TCPIPBIPMessageContent,
        ) -> Self {
            Self {
                magic_number,
                version,
                content,
            }
        }
    }
    pub static BASIC_PER_ALIGNED: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 1u32, 3u32, 0u32, 0u32]).to_owned());
}
