rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x1084_2008_TSM.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x1084_2008_TSM.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 227, column 2]
     │
     │ 
 227 │  ClientHello	::=	SEQUENCE { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
     │
─────╯
